--- a/style.css
+++ b/style.css
@@ -7,15 +7,17 @@
 }
 
 h1 {
-    font-family: Helvetica, sans-serif;
+    font-family: 'Amatic SC', cursive;
     text-align: center;
     color: #025883;
-    font-size: 60px;
+    font-size: 79px;
+    margin-bottom: 0px;
 }
 
 h3 {
-    font-family: Helvetica, sans-serif;
+    font-family:'Amatic SC', cursive;
     text-align: center;
     color: #76797b;
-    font-size: 25px;
+    font-size: 39px;
+    margin-top: 0px;
 }
