--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 h1 {
-    font-family: 'Amatic SC', cursive;
+    font-family: 'Amatic SC', sans-serif;
     text-align: center;
     color: #025883;
     font-size: 79px;
@@ -15,7 +15,7 @@ h1 {
 }
 
 h3 {
-    font-family:'Amatic SC', cursive;
+    font-family:'Amatic SC', sans-serif;
     text-align: center;
     color: #76797b;
     font-size: 39px;
